--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "csv-parse": "latest",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "fs": "latest",
@@ -58,7 +58,7 @@
     "papaparse": "latest",
     "path": "latest",
     "react": "^18",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
