--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "tailwindcss-animate": "^1.0.7",
     "timers": "latest",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^22",
