--- a/package.json
+++ b/package.json
@@ -40,17 +40,21 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@vercel/kv": "latest",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
+    "buffer": "^6.0.3",
     "cheerio": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "crypto": "^1.0.1",
     "csv-parse": "latest",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "fs": "latest",
     "input-otp": "1.4.1",
-    "intuit-oauth": "latest",
+    "intuit-oauth": "^4.2.0",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
